# coordinate-clicker-opencv

./: README.md  pyproject.toml  requirements.txt
src/: main.py
