[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opencv_pattern"
version = "0.1.0"
authors = [
    {name = "Alfie"},
]
description = "A simple OpenCV coordinate clicker"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "opencv-python",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/alfieroddan/coordinate-clicker-opencv"
"Bug Tracker" = "https://github.com/alfieroddan/coordinate-clicker-opencvissues"

[tool.setuptools]
packages = ["src"]

[project.scripts]
coord = "src.main:main"